Fix group member wrapping

--- a/src/components/Chat/ChatHeader/styles.scss
+++ b/src/components/Chat/ChatHeader/styles.scss
@@ -31,6 +31,7 @@
 
 .chat-header-channel-name {
   text-align: center;
+  font-size: 1.4em;
 }
 
 .channel-name-button {
