--- a/src/components/Groups/Group/Member/styles.scss
+++ b/src/components/Groups/Group/Member/styles.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   min-width: 55px;
   align-items: center;
-  margin: 0 10px 0 0;
+  margin: 10px 10px 0 0;
 }
 
 .group-members-icon {
