--- a/src/components/Groups/Group/styles.scss
+++ b/src/components/Groups/Group/styles.scss
@@ -73,6 +73,7 @@
 
 .group-current-members {
   display: flex;
-  flex-direction: row wrap;
+  flex-direction: row;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
